--- a/download.html
+++ b/download.html
@@ -2,53 +2,120 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Secure Access</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Secure Learning Access</title>
 
 <style>
+/* ========== THEME (Unacademy-style) ========== */
 :root{
-  --bg:#f2f2f7;--card:#ffffff;--text:#0f172a;
-  --muted:#6b7280;--primary:#007aff;
-  --danger:#ff3b30;--soft:#f4f4f5;
+  --primary:#0057ff;
+  --bg:#f5f8ff;
+  --card:#ffffff;
+  --text:#0f172a;
+  --muted:#6b7280;
+  --soft:#eef2ff;
+  --danger:#ef4444;
 }
-@media (prefers-color-scheme: dark){
+@media(prefers-color-scheme:dark){
   :root{
-    --bg:#0b0f1a;--card:#111827;--text:#e5e7eb;
-    --muted:#9ca3af;--primary:#0a84ff;
-    --danger:#ff453a;--soft:#1f2937;
+    --bg:#0b1220;
+    --card:#0f172a;
+    --text:#e5e7eb;
+    --muted:#9ca3af;
+    --soft:#1e293b;
   }
 }
 *{box-sizing:border-box}
 body{
   margin:0;
   font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text",system-ui;
-  background:var(--bg);color:var(--text);
+  background:linear-gradient(180deg,#e8efff,#f7faff 40%);
+  color:var(--text);
 }
-.container{max-width:420px;margin:auto;padding:20px}
-.card{
-  background:var(--card);
-  border-radius:28px;
-  padding:22px;
-  box-shadow:0 18px 40px rgba(0,0,0,.12);
+@media(prefers-color-scheme:dark){
+  body{
+    background:linear-gradient(180deg,#050b1a,#0b1220 45%);
+  }
+}
+.container{
+  max-width:420px;
+  margin:auto;
+  padding:20px;
 }
 .hidden{display:none}
-input,button{
-  width:100%;padding:14px;border-radius:16px;
-  border:none;font-size:15px
+
+/* ========== HEADER ========== */
+.header{
+  display:flex;
+  align-items:center;
+  gap:14px;
+  margin-bottom:18px;
 }
-input{background:var(--soft);color:var(--text);margin-top:10px}
+.logo{
+  width:48px;height:48px;
+  border-radius:50%;
+  background:var(--primary);
+  color:#fff;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:800;
+  font-size:18px;
+}
+.title{font-size:18px;font-weight:700}
+.subtitle{font-size:12px;color:var(--muted)}
+
+/* ========== CARD ========== */
+.card{
+  background:var(--card);
+  border-radius:32px;
+  padding:26px;
+  box-shadow:0 30px 60px rgba(0,0,0,.12);
+}
+
+/* ========== INPUT / BUTTON ========== */
+input{
+  width:100%;
+  padding:16px;
+  border:none;
+  border-radius:18px;
+  background:var(--soft);
+  color:var(--text);
+  font-size:15px;
+  margin-top:12px;
+}
 button{
-  margin-top:14px;background:var(--primary);
-  color:#fff;font-weight:600
+  width:100%;
+  margin-top:16px;
+  padding:16px;
+  border:none;
+  border-radius:20px;
+  background:var(--primary);
+  color:#fff;
+  font-weight:700;
+  font-size:15px;
 }
-button.secondary{background:var(--soft);color:var(--text)}
-.info{font-size:12px;color:var(--muted);margin-top:8px}
-.error{font-size:12px;color:var(--danger);margin-top:6px}
+button.secondary{
+  background:var(--soft);
+  color:var(--primary);
+}
+.info{
+  font-size:12px;
+  color:var(--muted);
+  margin-top:10px;
+}
+.error{
+  font-size:12px;
+  color:var(--danger);
+  margin-top:8px;
+}
+.section{margin-top:22px}
 .box{
-  background:var(--soft);padding:12px;
-  border-radius:16px;font-size:13px
+  background:var(--soft);
+  padding:14px;
+  border-radius:18px;
+  font-size:13px;
 }
-.section{margin-top:20px}
 .center{text-align:center}
 </style>
 </head>
@@ -56,96 +123,100 @@ button.secondary{background:var(--soft);color:var(--text)}
 <body>
 <div class="container">
 
-<!-- LOGIN -->
-<div id="loginBox" class="card">
-  <h3 class="center">Secure Login</h3>
-  <input id="sitePass" type="password" placeholder="Website password">
-  <button onclick="loginSite()">Login</button>
-  <div class="info">
-    Password format: <b>RS@DDMMYYYY</b><br>
-    Example: <b>RS@21012026</b>
-  </div>
-  <div id="siteErr" class="error"></div>
-</div>
+<!-- ================= LOGIN PAGE ================= -->
+<div id="loginBox">
 
-<!-- DASHBOARD -->
-<div id="contentBox" class="card hidden">
-
-  <div class="box center" id="sessionTimer"></div>
-
-  <!-- Instructions -->
-  <div class="section">
-    <button class="secondary" onclick="toggleGuide()">Instructions</button>
-    <div id="guideBox" class="box hidden">
-      🔑 <b>How to Generate Access Key (Valid for 24 Hours)</b><br><br>
-
-      • If you open the link from an app, ads may appear in Chrome<br>
-      • To avoid ads, open directly using <b>Opera Mini</b><br>
-      • If website/app does not open, turn ON VPN and try again<br><br>
-
-      <b>Steps:</b><br>
-      1. Turn OFF Private / Custom DNS<br>
-      2. Update Google Chrome to latest version<br>
-      3. Use Chrome (recommended) or Opera Mini<br>
-      4. If any extra page opens, press BACK once<br>
-      5. Laptop users: Turn ON VPN + use Ad-Blocker<br><br>
-
-      ⏳ Access key valid for 24 hours only<br>
-      (This avoids copyright issues)
+  <div class="header">
+    <div class="logo">PW</div>
+    <div>
+      <div class="title">Secure Access</div>
+      <div class="subtitle">Learning Platform Login</div>
     </div>
   </div>
 
-  <!-- Website -->
-  <div class="section">
-    <button onclick="window.open('https://rarestudy.site','_blank')">
-      Open Website
-    </button>
-  </div>
+  <div class="card">
+    <input id="sitePass" type="password" placeholder="🔒 Enter today’s access key">
+    <button onclick="login()">Login</button>
 
-  <!-- Video -->
-  <div class="section">
-    <div class="box">
-      <b>Instruction Video</b><br><br>
-      <iframe width="100%" height="180"
-        src="https://drive.google.com/file/d/1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T/preview"
-        allow="autoplay">
-      </iframe>
-    </div>
-  </div>
-
-  <!-- APK -->
-  <div class="section">
-    <input id="apkPass" type="password" placeholder="APK password">
     <div class="info">
-      Format: <b>APK@DDMMYYYY</b><br>
-      Example: <b>APK@21012026</b>
+      Password format: <b>RS@DDMMYYYY</b><br>
+      Example: <b>RS@21012026</b>
     </div>
-    <button onclick="unlockApk()">Unlock APK</button>
-    <div id="apkErr" class="error"></div>
-    <a id="apkLink" class="hidden"
-      href="https://drive.google.com/uc?export=download&id=1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH">
-      <button class="secondary">Download APK</button>
-    </a>
+    <div id="loginErr" class="error"></div>
   </div>
 
-  <!-- History -->
-  <div class="section">
-    <div class="box" id="historyBox"></div>
-  </div>
 </div>
 
-<!-- ADMIN (HIDDEN, LOCAL ONLY) -->
-<div id="adminPanel" class="card hidden">
-  <h4>Admin</h4>
-  <input id="adminPass" type="password" placeholder="Admin password">
-  <button onclick="adminLogin()">Unlock</button>
-  <div id="adminErr" class="error"></div>
+<!-- ================= DASHBOARD (AFTER LOGIN) ================= -->
+<div id="dashboard" class="hidden">
 
-  <div id="adminActions" class="hidden">
-    <input id="tempPass" placeholder="Temporary website password">
-    <button onclick="setTempPassword()">Set Temp Password (24h)</button>
-    <button class="secondary" onclick="clearHistory()">Clear History</button>
-    <button class="secondary" onclick="forceLogout()">Force Logout</button>
+  <div class="header">
+    <div class="logo">PW</div>
+    <div>
+      <div class="title">Access Granted</div>
+      <div class="subtitle">Session Active</div>
+    </div>
+  </div>
+
+  <div class="card">
+
+    <!-- TIMER -->
+    <div class="box center" id="timer"></div>
+
+    <!-- INSTRUCTIONS -->
+    <div class="section">
+      <button class="secondary" onclick="toggleInstructions()">Instructions</button>
+      <div id="instructions" class="box hidden">
+        🔑 <b>How to Generate Access Key (Valid for 24 Hours)</b><br><br>
+
+        • If you open the link from an app, ads may appear in Chrome<br>
+        • To avoid ads, open directly using <b>Opera Mini</b><br>
+        • If website/app does not open, turn ON VPN and try again<br><br>
+
+        <b>Steps:</b><br>
+        1️⃣ Turn OFF Private / Custom DNS<br>
+        2️⃣ Update Google Chrome to latest version<br>
+        3️⃣ Use Chrome (recommended) or Opera Mini<br>
+        4️⃣ If any extra page opens, press BACK once<br>
+        5️⃣ Laptop users: Turn ON VPN + use Ad-Blocker<br><br>
+
+        ⏳ Access Key valid for 24 hours only<br>
+        (This avoids copyright issues)
+      </div>
+    </div>
+
+    <!-- WEBSITE -->
+    <div class="section">
+      <button onclick="openWebsite()">Open Website</button>
+    </div>
+
+    <!-- VIDEO -->
+    <div class="section">
+      <div class="box">
+        <b>Instruction Video</b><br><br>
+        <iframe width="100%" height="180"
+          src="https://drive.google.com/file/d/1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T/preview"
+          allow="autoplay">
+        </iframe>
+      </div>
+    </div>
+
+    <!-- APK (LOGIN KE BAAD HI) -->
+    <div class="section">
+      <input id="apkPass" type="password" placeholder="🔐 Enter APK password">
+      <div class="info">
+        Format: <b>APK@DDMMYYYY</b><br>
+        Example: <b>APK@21012026</b>
+      </div>
+      <button onclick="unlockAPK()">Unlock APK</button>
+      <div id="apkErr" class="error"></div>
+
+      <a id="apkLink" class="hidden"
+        href="https://drive.google.com/uc?export=download&id=1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH">
+        <button class="secondary">Download APK</button>
+      </a>
+    </div>
+
   </div>
 </div>
 
@@ -153,7 +224,6 @@ button.secondary{background:var(--soft);color:var(--text)}
 
 <script>
 const SESSION = 24*60*60*1000;
-const HISTORY_DAYS = 7;
 
 /* DATE */
 function today(){
@@ -163,31 +233,24 @@ function today(){
          d.getFullYear();
 }
 
-/* PASSWORD LOGIC */
-function getSitePassword(){
-  const o=JSON.parse(localStorage.getItem("siteOverride")||"null");
-  if(o && Date.now()<o.expires) return o.password;
-  return "RS@"+today();
-}
-function getApkPassword(){
-  return "APK@"+today();
-}
+/* PASSWORDS */
+function sitePassword(){ return "RS@"+today(); }
+function apkPassword(){ return "APK@"+today(); }
 
 /* LOGIN */
-function loginSite(){
-  if(sitePass.value!==getSitePassword()){
-    siteErr.innerText="Wrong password";
+function login(){
+  if(sitePass.value!==sitePassword()){
+    loginErr.innerText="Wrong password";
     return;
   }
   localStorage.setItem("loginTime",Date.now());
-  addHistory("Website Login");
   loginBox.classList.add("hidden");
-  contentBox.classList.remove("hidden");
-  startSession();
+  dashboard.classList.remove("hidden");
+  startTimer();
 }
 
 /* SESSION TIMER */
-function startSession(){
+function startTimer(){
   setInterval(()=>{
     const t=localStorage.getItem("loginTime");
     if(!t || Date.now()-t>=SESSION){
@@ -199,82 +262,40 @@ function startSession(){
     const h=Math.floor(left/3600000);
     const m=Math.floor((left%3600000)/60000);
     const s=Math.floor((left%60000)/1000);
-    sessionTimer.innerText=`Session expires in ${h}h ${m}m ${s}s`;
+    timer.innerText=`⏳ Session expires in ${h}h ${m}m ${s}s`;
   },1000);
 }
 
+/* INSTRUCTIONS */
+function toggleInstructions(){
+  instructions.classList.toggle("hidden");
+}
+
+/* WEBSITE */
+function openWebsite(){
+  window.open("https://rarestudy.site","_blank");
+}
+
 /* APK */
-function unlockApk(){
-  if(apkPass.value!==getApkPassword()){
+function unlockAPK(){
+  if(apkPass.value!==apkPassword()){
     apkErr.innerText="Wrong APK password";
     return;
   }
   apkErr.innerText="";
   apkLink.classList.remove("hidden");
-  addHistory("APK Unlocked");
 }
 
-/* HISTORY */
-function addHistory(type){
-  const now=Date.now();
-  const limit=HISTORY_DAYS*24*60*60*1000;
-  let list=JSON.parse(localStorage.getItem("history")||"[]");
-  list=list.filter(i=>now-i.time<limit);
-  list.unshift({type,time:now});
-  localStorage.setItem("history",JSON.stringify(list));
-  renderHistory();
-}
-function renderHistory(){
-  const list=JSON.parse(localStorage.getItem("history")||"[]");
-  historyBox.innerHTML=list.length
-    ? list.map(i=>`• ${i.type} — ${new Date(i.time).toLocaleString()}`).join("<br>")
-    : "No recent activity";
-}
-
-/* ADMIN (LOCAL ONLY) */
-function adminPassword(){return "ADMIN@"+today();}
-function adminLogin(){
-  if(adminPass.value!==adminPassword()){
-    adminErr.innerText="Access denied";return;
-  }
-  adminActions.classList.remove("hidden");
-}
-function setTempPassword(){
-  const p=tempPass.value.trim();
-  if(!p) return alert("Enter password");
-  localStorage.setItem("siteOverride",JSON.stringify({
-    password:p,expires:Date.now()+SESSION
-  }));
-  alert("Temporary password set for 24 hours");
-}
-function clearHistory(){
-  localStorage.removeItem("history");renderHistory();
-}
-function forceLogout(){
-  localStorage.removeItem("loginTime");
-  location.reload();
-}
-
-/* UI */
-function toggleGuide(){guideBox.classList.toggle("hidden");}
-
-/* SECRET ADMIN OPEN */
-document.addEventListener("keydown",e=>{
-  if(e.ctrlKey&&e.shiftKey&&e.key==="A"){
-    adminPanel.classList.toggle("hidden");
-  }
-});
-
-/* RESUME SESSION */
+/* AUTO RESUME */
 window.onload=()=>{
-  renderHistory();
   const t=localStorage.getItem("loginTime");
   if(t && Date.now()-t<SESSION){
     loginBox.classList.add("hidden");
-    contentBox.classList.remove("hidden");
-    startSession();
+    dashboard.classList.remove("hidden");
+    startTimer();
   }
 };
 </script>
+
 </body>
   </html>
