--- a/download.html
+++ b/download.html
@@ -108,7 +108,7 @@ iframe{border:none;border-radius:18px}
 
   <p class="small">
     Format: <b>RS@DDMMYYYY</b><br>
-    Example: <b>RS@22012026</b>
+    Example: <b>RS@01012025</b>
   </p>
 
   <p id="loginErr" class="small" style="color:#c00"></p>
@@ -133,19 +133,24 @@ iframe{border:none;border-radius:18px}
 
 <b>⚠️ Important Browser Note:</b><br>
 • If you open the link from an app, ads may appear.<br>
-• To avoid ads, open directly using <b>Opera Mini</b>.<br>
-• If the site does not open, turn <b>ON VPN</b>.<br><br>
+• To avoid ads, open the website directly using <b>Opera Mini</b>.<br>
+• If the website does not open, turn <b>ON VPN</b> and try again.<br><br>
 
-<b>📌 Steps:</b><br>
-1. Turn OFF <b>Private DNS / Custom DNS</b>.<br>
-2. Update your browser.<br>
-3. Chrome (recommended) / Opera Mini (fewer ads).<br>
-4. If ad opens, press <b>BACK</b> once.<br>
-5. Laptop users: VPN + Ad-Blocker.<br><br>
+<b>📌 Steps to Generate Key:</b><br>
+1. Turn OFF <b>Private DNS / Custom DNS</b> from phone settings.<br>
+2. Make sure your browser is updated to the latest version.<br>
+3. Use the correct browser:<br>
+&nbsp;&nbsp;• Chrome → Recommended<br>
+&nbsp;&nbsp;• Opera Mini → Fewer ads (Best option)<br>
+4. If anything opens after you click a link, just press <b>BACK</b> once and continue. Your key will be generated successfully.<br>
+5. <b>Laptop / PC users:</b><br>
+&nbsp;&nbsp;• Turn ON VPN<br>
+&nbsp;&nbsp;• Use an Ad-Blocker extension<br><br>
 
-<b>⏳ Validity:</b><br>
-• Access valid for <b>24 hours</b> only.<br>
-• Re-login required after expiry due to <b>copyright ©️ compliance</b>.
+<b>⏳ Key Validity:</b><br>
+• Access Key is valid for <b>24 hours only</b>.<br>
+• After 24 hours, you must login again and repeat the process.<br>
+• This restriction is required due to <b>copyright ©️ compliance</b>.
 
     </div>
   </div>
@@ -153,9 +158,20 @@ iframe{border:none;border-radius:18px}
   <!-- VIDEO -->
   <div class="card">
     <b>Instruction Video</b><br><br>
-    <iframe width="100%" height="200"
-      src="https://drive.google.com/file/d/1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T/preview">
+
+    <iframe
+      width="100%"
+      height="200"
+      src="https://drive.google.com/file/d/16WmuBH_ycBUAsqNYaSDnJ9nbS5s2JF2s/preview"
+      allow="autoplay; encrypted-media"
+      allowfullscreen>
     </iframe>
+
+    <p class="small" style="margin-top:8px">
+      If the video does not load on laptop/PC,
+      <a href="https://drive.google.com/file/d/16WmuBH_ycBUAsqNYaSDnJ9nbS5s2JF2s/view"
+         target="_blank">click here to watch directly</a>.
+    </p>
   </div>
 
   <!-- WEBSITE -->
@@ -276,4 +292,4 @@ window.onload=()=>{
 </script>
 
 </body>
-                                                     </html>
+      </html>
